# management-system

./: CMakeLists.txt  README.md  human.cpp  human.h  main.cpp  school.cpp  school.h  student.cpp  student.h  teacher.cpp  teacher.h  test.cpp  utils.cpp  utils.h
data_base/: students.txt  teachers.txt
data_base/teachers_data/1/: 1.txt  2.txt
data_base/teachers_data/2/: 1.txt  2.txt
testing/1/: in.txt  out.txt  res.txt
